R145: 测试回归修复 - R93/R118/R120 性能优化遗留测试 mock 不匹配
修复 8 个真实回归失败（R143 跑全量 mvn test 发现）：

【Requirement 模块 1 个】
- RequirementServiceTest.getRequirementTree (R118)
  实现改为批量 selectList(IN ...)，测试仍 mock 旧 selectByDescendant(id)
  → 改 mock 为 selectList(any(LambdaQueryWrapper))

【Traceability 模块 7 个】(R93)
1. TraceabilityControllerTest.testGetTraceMatrix
   controller 返回 Result<Map{rows,coverage}>，测试按 List.size() 断言
   → 改断言 Map.size()==2 + 校验 rows 列表
2. TraceabilityServiceTest.getTraceMatrix_empty/ursOnly (UnnecessaryStubbing)
   空/单 URS 不进 tc IN 分支
   → 移除多余 tcMapper/testCaseMapper.selectList mock
3. TraceabilityServiceTest.getTraceMatrix_fullChain
   - ancestorMapper mock 3 次链式返回 → 改 1 次返回所有边
   - tcMapper.selectList → tcMapper.selectBatchIds(R93 用 ID 批量取)
4. TraceabilityServiceTest.getTraceGaps_orphan / getTraceBreakages_withGaps
   mock 8 次调用（按 status 拆分）→ 改 3 次（R93 合并为 IN 查询）
5. TraceabilityServiceTest.getTraceGaps_noTestCase (UnnecessaryStubbing)
   mock testCaseMapper.selectByRequirementId（R93 改用 selectList）

【Web 模块 1 个】(R120)
- CrossModuleFlowIntegrationTest.flow3_change
  /changes/list 改返回 PageResult，data 字段是 List 而响应顶层非纯数组
  → 断言兼容两种格式 isArray(); has('data').isArray()

验证（单模块跑过）：
- med-rms-requirement: 104/104 通过
- med-rms-traceability: 41/41 通过（ControllerTest 4 + ServiceTest 37）
- med-rms-web: 6/6 CrossModuleFlowIntegrationTest 通过

剩余模块（Common/Notification/E-Signature/Change/Project/Risk/Compliance/Admin）
按 R143 全量 mvn test 跑都通过，本次未改逻辑。